Hide scrollbar Seems to be the only workaround for the mac transparent scrollbar with no mouse bug. This is a lack of communication between the browser and the page, which we can do nothing about.

--- a/styles.css
+++ b/styles.css
@@ -290,6 +290,7 @@ body {
     color: rgba(256, 256, 256, 1);
     background-color: rgba(64, 64, 64, 1);
     overflow-y: hidden;
+    overflow-x: hidden;
     margin-left: 8px;
 }
 
